# icnaming

./: .gitignore  .gitpod.yml
src/: Cargo.toml  dfx.json  package-lock.json  package.json
src/canisters/registry/src/: lib.rs
src/canisters/registry/src/service/: tests.rs
src/canisters/resolver/src/: lib.rs
src/common/common/src/: constants.rs  ic_logger.rs  named_canister_ids.rs
src/env_configs/: dev.canister_ids.env
src/scripts/features/: registrar.feature
src/scripts/features/step_definitions/: registry_steps.ts
